[gd_scene load_steps=7 format=3 uid="uid://b1nlnfp65bmf0"]

[ext_resource type="Script" path="res://Level.gd" id="1_7104u"]
[ext_resource type="PackedScene" uid="uid://3c4p2vpoyeop" path="res://block_tilemap.tscn" id="2_1do7c"]
[ext_resource type="PackedScene" uid="uid://dhykwbi33k28c" path="res://level_ui.tscn" id="3_wfv8q"]
[ext_resource type="PackedScene" uid="uid://b5rexhwjrgrbg" path="res://game_over.tscn" id="4_i2skn"]
[ext_resource type="PackedScene" uid="uid://cfsjtcw2g26fc" path="res://pause_menu.tscn" id="7_e81f6"]
[ext_resource type="PackedScene" uid="uid://2l72ro810r3o" path="res://in_game_options_menu.tscn" id="8_qhafr"]

[node name="Level" type="Node2D" node_paths=PackedStringArray("ui", "game_over_ui")]
script = ExtResource("1_7104u")
ui = NodePath("Level_UI")
game_over_ui = NodePath("Game_Over_UI")

[node name="Level_UI" parent="." instance=ExtResource("3_wfv8q")]

[node name="Tilemap" parent="." node_paths=PackedStringArray("game", "pause_menu") instance=ExtResource("2_1do7c")]
game = NodePath("..")
pause_menu = NodePath("../Pause_Menu")

[node name="Game_Over_UI" parent="." instance=ExtResource("4_i2skn")]
visible = false

[node name="Pause_Menu" parent="." node_paths=PackedStringArray("map", "options_menu") instance=ExtResource("7_e81f6")]
visible = false
map = NodePath("../Tilemap")
options_menu = NodePath("../Options Menu")

[node name="Options Menu" parent="." node_paths=PackedStringArray("pause_menu") instance=ExtResource("8_qhafr")]
visible = false
pause_menu = NodePath("../Pause_Menu")

[connection signal="game_end" from="Tilemap" to="." method="_on_tilemap_game_end"]
